--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.firebase:firebase-firestore:20.2.0'
     implementation 'com.firebaseui:firebase-ui-firestore:5.0.0'
-
+    implementation 'com.google.firebase:firebase-analytics:17.2.0'
 
 
     // an alternative to picasso
